--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=SpringBootIntro
 
+#server.port=8081
+server.error.include-binding-errors=always
+server.error.include-message=always
+server.error.include-stacktrace=never
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/sbootintro
 spring.datasource.username=dev_user
 spring.datasource.password=dev_user
